Sat, Nov 30, 2008
---------------------------------------------------------------------
- More work on [accounts] model, CSS styles, and [add account] form.

Sat, Nov 29, 2008
---------------------------------------------------------------------
- Added tabbed and tabless layouts, implemented tabs and current tab tracking.
- Applied CSS styles to all tabless forms (login, sign up, and forgot password).
- Created two column layout for the main contents area.
- Created [Accounts] scaffold and added [Accounts] tab.

Fri, Nov 28, 2008
---------------------------------------------------------------------
- Implemented sign up, login, logout, and forgotten password using [authlogic] plugin.

Wed, Nov 26, 2008
---------------------------------------------------------------------
- Installed [open_id_authentication] plugin.
- Modified [users] table to work with [authlogic] plugin, added tables for openid authentication.

Tue, Nov 25, 2008
---------------------------------------------------------------------
- Installed plugins: [authlogic], [searchlogic], [calendar_date_select], [auto_complete], [in_place_editor], and [haml].

Mon, Nov 24, 2008
---------------------------------------------------------------------
- Added [sessions] and [users] tables, created [User] model.
- Installed Rspec and [acts_as_paranoid] plugins.
- Created the project and posted it on GitHub.