@@ -1,5 +1,10 @@
 class User < ActiveRecord::Base
   
+  has_many :accounts
+  has_many :permissions
+  has_many :shared_accounts, :through => :permissions, :source => :asset, :source_type => "Account", :class_name => "Account"
+  acts_as_paranoid
+  
   # All of the following code is for OpenID integration.
   acts_as_authentic(
     :login_field => :username,
